--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +14,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TeamsCollaboration"
         tools:targetApi="34">
+        <activity
+            android:name=".TaskDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TasksMembers"
+            android:exported="false" />
+        <activity
+            android:name=".AddTaskActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WorkSpaceDetails"
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".AllMembersActivity"
             android:exported="false" />
