Improved Add workspace and members activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".AllMembersActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".ChooseMembers"
             android:exported="false" />
