--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TeamsCollaboration"
         tools:targetApi="34">
+        <activity
+            android:name=".ImageViewerActivity"
+            android:exported="false" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
